--- a/components/book_card/styles/component_card.css
+++ b/components/book_card/styles/component_card.css
@@ -3,6 +3,8 @@
 :root {
     font-family: 'Signika SC', sans-serif;
     font-size: 16px;
+    --color-shadow: #171717;
+    --color-shadow-deep: #696969;
 }
 
 * {
@@ -36,15 +38,15 @@
     transition: 0.3s ease-in-out;
 }
 
-.status:hover {
+.library-wrapper .status:hover {
     height: 75px;
 }
 
 .status::after {
-    border-top: 19px solid transparent;
-    border-left: 19px solid transparent;
-    border-bottom: 19px solid var(--book-color);
-    border-right: 19px solid transparent;
+    border-top: 20px solid transparent;
+    border-left: 20px solid transparent;
+    border-bottom: 20px solid var(--book-color);
+    border-right: 20px solid transparent;
     content: '';
     position: absolute;
     bottom: 0;
@@ -56,7 +58,7 @@
     transition: 0.5s ease-in-out;
 }
 
-.card:hover {
+.library-wrapper .card:hover {
     transform: scale(1.03);
 }
 
@@ -77,7 +79,11 @@
     border: none;
     background-color: #c4c4c4;
     justify-content: center;
-    box-shadow: 0 0 10px #000000;
+    box-shadow: 0 0 7px var(--color-shadow);
+}
+
+.library-wrapper .card.add:hover {
+    box-shadow: 0 3px 15px var(--color-shadow-deep);
 }
 
 .card.add svg {
@@ -86,8 +92,7 @@
 }
 
 .book {
-    border: 1px solid #000;
-    box-shadow: 10px 10px 10px -5px #9e9e9e;
+    box-shadow: 0 0 7px var(--color-shadow);
     background-color: var(--book-color);
     color: #100f13;
     padding-top: 80px;
@@ -99,8 +104,8 @@
     transition: 0.5s;
 }
 
-.card:hover .book {
-    box-shadow: 13px 13px 10px -5px #d4d4d4;
+.library-wrapper .card:hover .book {
+    box-shadow: 0 3px 15px var(--color-shadow-deep);
 }
 
 .book:before {
