--- a/styles/component_card.css
+++ b/styles/component_card.css
@@ -15,15 +15,15 @@
     transition: 0.3s ease-in-out;
 }
 
-.status:hover {
+.library-wrapper .status:hover {
     height: 75px;
 }
 
 .status::after {
-    border-top: 19px solid transparent;
-    border-left: 19px solid transparent;
-    border-bottom: 19px solid var(--book-color);
-    border-right: 19px solid transparent;
+    border-top: 20px solid transparent;
+    border-left: 20px solid transparent;
+    border-bottom: 20px solid var(--book-color);
+    border-right: 20px solid transparent;
     content: '';
     position: absolute;
     bottom: 0;
@@ -35,7 +35,7 @@
     transition: 0.5s ease-in-out;
 }
 
-.card:hover {
+.library-wrapper .card:hover {
     transform: scale(1.03);
 }
 
@@ -53,14 +53,18 @@
 }
 
 .card.add {
-    background-color: #f8f1dd;
+    background-color: #27272a;
     border: none;
-    box-shadow: 0 0 10px #9e9e9e;
+    box-shadow: 0 0 7px var(--color-shadow);
     justify-content: center;
     transition: 0.5s ease-in-out;
 }
 
-.card.add:hover {
+.library-wrapper .card.add:hover {
+    box-shadow: 0 3px 15px var(--color-shadow-deep);
+}
+
+.library-wrapper .card.add:hover {
     box-shadow: 0 0 15px #d4d4d4;
     transform: scale(1.03);
 }
@@ -72,7 +76,7 @@
 
 .book {
     border: 1px solid #000;
-    box-shadow: 10px 10px 10px -5px #9e9e9e;
+    box-shadow: 0 0 7px var(--color-shadow);
     background-color: var(--book-color);
     color: #100f13;
     padding-top: 80px;
@@ -84,8 +88,8 @@
     transition: 0.5s;
 }
 
-.card:hover .book {
-    box-shadow: 13px 13px 10px -5px #d4d4d4;
+.library-wrapper .card:hover .book {
+    box-shadow: 0 3px 15px var(--color-shadow-deep);
 }
 
 .book:before {
