--- a/styles/component_modal.css
+++ b/styles/component_modal.css
@@ -14,13 +14,14 @@
     gap: 12px;
 }
 
-.book-container .status {
+.book-container .status-container>.status {
     cursor: default;
 }
 
 .book-container .book {
     box-shadow: none;
     cursor: default;
+    transition: 0s ease-in-out;
 }
 
 .customize-container {
@@ -51,8 +52,16 @@ form {
     gap: 18px;
 }
 
-.book-property-container .input-container {
+.book-property-container div:not(:nth-of-type(n + 4)) {
     position: relative;
+}
+
+.book-property-container div:not(:nth-of-type(n + 3)) label {
+    cursor: text;
+}
+
+.book-property-container div:nth-of-type(3) label {
+    cursor: pointer;
 }
 
 .book-property-container label {
@@ -65,6 +74,10 @@ form {
     z-index: 1;
 }
 
+.book-property-container > div:not(:nth-of-type(n + 4)) label {
+    padding: 0 5px;
+}
+
 .book-property-container>div:nth-of-type(n + 4) {
     cursor: default;
 }
@@ -74,7 +87,13 @@ form {
     position: static;
 }
 
-.book-property-container label.active {
+.book-property-container > div:not(:nth-of-type(n + 4)):has(input:focus, select:focus) > label {
+    color: #e3e3e3;
+    font-size: 0.9rem;
+    top: 0;
+}
+
+.book-property-container :is(.input-container, .select-container) label.active {
     color: #e3e3e3;
     font-size: 0.9rem;
     top: 0;
@@ -93,15 +112,9 @@ form {
     transition: 0.3s;
 }
 
-.book-property-container input[type='text']:hover,
-.book-property-container select:hover {
-    box-shadow: 0 0 15px -5px #FFF;
-}
-
 .book-property-container input[type='text']:focus,
 .book-property-container select:focus {
     border: 2px solid #ffffff;
-    box-shadow: 0 0 15px -5px #FFF;
 }
 
 .book-property-container input[type='text'].active,
