--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -11,6 +11,17 @@
     }
 }
 
+@media screen and (max-width: 700px) {
+    .modal-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .book-container {
+        order: 1;
+    }
+}
+
 @media screen and (max-width: 540px) {
     .legend-container {
         flex-direction: column;
