--- a/styles/component_card.css
+++ b/styles/component_card.css
@@ -145,13 +145,31 @@
     background-color: #dd2525 !important;
 }
 
+.add-animation {
+    animation: add_animation 0.6s ease;
+}
+
+.delete-animation {
+    animation: delete_animation 0.6s ease;
+}
+
+@keyframes add_animation {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    } to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 @keyframes delete_animation {
     from {
         transform: scale(1);
     }
 
-    20% {
-        transform: scale(1.2);
+    40% {
+        transform: scale(1.25);
     }
 
     80% {
