--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -22,6 +22,12 @@
     }
 }
 
+@media screen and (max-width: 700px) and (max-height: 820px) {
+    .modal .book-container {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 540px) {
     .legend-container {
         flex-direction: column;
